# Auth-System

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
auth/: __init__.py  config.py  database.py
auth/static/css/: theme.sass.css  theme.sass.css.map
auth/static/sass/: theme.sass
auth/templates/: change_password.html  index.html  login.html  main.html  signup.html  welcome.html
scripts/postgresql/: init.sql
scripts/sqlite3/: init.sql
